<resources>
    <string name="app_name">Flight search</string>
    <string name="fly_search">FLIGHT SEARCH</string>
    <string name="conexion">CONEXION</string>
    <string name="search">SEARCH</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="itinerarios">Itinerate</string>
    <string name="title">¿Are you sure that you want reserve this flight?</string>
    <string name="reserva">Reserve</string>
    <string name="reservas">Reservations</string>
    <string name="cancelar">Cancel</string>
    <string name="modificar">¿What do u want to do with this reservation?</string>
    <string name="mod">Modify</string>
    <string name="cancel">Cancel</string>
    <string name="register">¿Don`t you have an account?</string>
    <string name="Reg">Register</string>
    <string name="lastname">Last name</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="depart">DEPART</string>
    <string name="ret">RETURN</string>
    <string name="sf">Flight search</string>
    <string name="trip">TRIP TYPE</string>
    <string name="pas">PASSENGERS</string>
    <string name="wb">Welcome back user!</string>
    <string name="email">Email</string>
    <string name="in">Introduce your data!</string>
    <string name="cr">Some field is empty</string>
    <string name="ok">OK</string>
    <string name="m">Madrid</string>
    <string name="b">Barcelona</string>
    <string name="l">London</string>
    <string name="r">Roma</string>
    <string name="v">Venice</string>
    <string name="t">Tokio</string>
    <string name="p">Paris</string>
    <string name="s">Switzerland</string>
    <string name="eIncorrect">Email incorrect or empty</string>
    <string name="gallery">Gallery</string>
    <string name="channel_id">Flight Alarm</string>
    <string name="cityI">The origin city or the destination city are incorrect</string>
    <string name="comp">Some field is empty, the email field is wrong write or the dates are incorrect</string>
    <string name="paris">Paris is the capital of France and its most populous city. Capital of the Ile-de-France region, it is the only unicommunal department in the country.</string>
    <string name="suiza">Switzerland, officially the Swiss Confederation, is a landlocked country in Central Europe with a population of about 1,000. Switzerland is a federated republic of 26 states.</string>
    <string name="japon">Tokyo, officially Tokyo Metropolis, is the de facto capital of Japan, located in the east center of the island of Honshu</string>
    <string name="venecia">Venice is a city located in northeastern Italy. It is also the capital of the Veneto region and the province of Venice.</string>
    <string name="roma">Rome is an Italian city, capital of the Lazio region and of Italy. It is the most populous municipality in Italy and the third most populous in the European Union. It has been known since antiquity as the "Urbe". It is also called "The Eternal City".</string>
    <string name="londres">London is the capital and largest city of England and the United Kingdom. It is situated on the banks of the River Thames.</string>
    <string name="madrid">Madrid is a municipality and a city in Spain, with the historical category of villa. It is the capital of the State and of the Community of Madrid. It is the most populated municipality in Spain.</string>
    <string name="barcelona">Barcelona is a Spanish city, capital of the autonomous community of Catalonia, of the province of the same name and of the Barcelonés region. With a population of 1 664 162 inhabitants in 2020.</string>
</resources>